Fixing spacing between project images

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -22,4 +22,5 @@
   width: 300px;
   height: 150px;
   object-fit: cover;
+  margin-top: 10px;
 }
